--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ pandas
 numpy
 scikit-learn
 streamlit==1.20.0
-streamlit-extras==0.2.6
-python_version==3.9
+streamlit-extras==0.2.6; python_version=='3.9'
